# adbench-extracted-acc-benchmarks

./: .gitmodules  adbench-accelerate.cabal  stack.yaml
src/: GMMIO.hs  M1.hs  M1N.hs  M2.hs  M3.hs  M4.hs  M4N.hs  M4a.hs  M4b.hs  Main.hs  Support.hs  Types.hs
