cabal-version:       >=1.10
name:                adbench-accelerate
version:             0.0.1.0
author:              Tom Smeding
maintainer:          tom.smeding@gmail.com
build-type:          Simple

executable adbench-accelerate
  main-is:             Main.hs
  other-modules:       GMMIO,
                       M1, M2, M3, M4, M4a, M4b, M1N, M4N,
                       Support, Types
  build-depends:       base >= 4.13 && < 4.15,
                       accelerate,
                       accelerate-llvm-native,
                       accelerate-llvm-ptx,
                       criterion-measurement >= 0.1.2 && < 0.2,
                       filepath,
                       deepseq,
                       bytestring >= 0.10.10 && < 0.12,
                       bytestring-lexing >= 0.5.0.2 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -g -debug -threaded -rtsopts
